more bullet points

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10dffd1d0>"
+       "<IPython.lib.display.IFrame at 0x106dd0128>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,9 @@
     }
    },
    "source": [
-    "* Function definition"
+    "* Function definition\n",
+    "    * Regular function\n",
+    "    * Lambda function"
    ]
   },
   {
@@ -228,7 +230,9 @@
    },
    "source": [
     "### 1.2. Control statement\n",
-    "* Control statement"
+    "\n",
+    "* Loop (if, while, comprehension, etc.)\n",
+    "* Conditional statement"
    ]
   },
   {
@@ -243,6 +247,123 @@
     "\n",
     "* conda\n",
     "* virtualenv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 1.4. IDE\n",
+    "\n",
+    "* Jupyter Notebook\n",
+    "* Visual Studio Code\n",
+    "* PyCharm\n",
+    "* Spyder\n",
+    "* Atom\n",
+    "* ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 5. Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 5.1. X-Y plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 5.2. Bar chart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 5.3. Histogram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 5.4. Heatmap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 5.5. Visualization on geolocation map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 6. Model Fitting Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 6.1. Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* 6.2. k-Means"
    ]
   },
   {
