finished background session

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -48,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -55,8 +56,26 @@
     }
    },
    "source": [
-    "* High level description\n",
-    "* The history"
+    "* High-level programming language for general-purpose programming\n",
+    "* Supports multiple programming paradigms\n",
+    "    * Object-oriented\n",
+    "    * Functional\n",
+    "    * Procedural\n",
+    "    * Imperative\n",
+    "* Easy interface with other languages, such as C++/Java\n",
+    "* A large and comprehensive standard library\n",
+    "* Not so fast though …"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![title](../pics/history.png)"
    ]
   },
   {
@@ -69,7 +88,7 @@
    "source": [
     "### 0.2. The eco-system\n",
     "\n",
-    "* Insert a picture here"
+    "![title](../pics/ecosystem.png)"
    ]
   },
   {
@@ -85,8 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -102,20 +123,49 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x106dd0128>"
+       "<IPython.lib.display.IFrame at 0x10a85a828>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from IPython.core.display import HTML,display\n",
-    "# HTML('<iframe src=https://pythonclock.org/ width=700 height=200></iframe>')\n",
-    "\n",
     "from IPython.display import IFrame\n",
     "IFrame('https://pythonclock.org/', width=700, height=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 0.3. IDE\n",
+    "(picture source: https://www.datacamp.com/community/tutorials/tutorial-jupyter-notebook)\n",
+    "\n",
+    "* Jupyter Notebook\n",
+    "![title](../pics/jupyternotebook.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Visual Studio Code\n",
+    "(picture source: https://code.visualstudio.com/docs/python/editing)\n",
+    "![title](../pics/vscode.gif)\n",
+    "* PyCharm\n",
+    "* Spyder\n",
+    "* Atom\n",
+    "* ..."
    ]
   },
   {
@@ -256,16 +306,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "### 1.4. IDE\n",
-    "\n",
-    "* Jupyter Notebook\n",
-    "* Visual Studio Code\n",
-    "* PyCharm\n",
-    "* Spyder\n",
-    "* Atom\n",
-    "* ..."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
