finished the full presentation template

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -48,7 +48,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -123,10 +122,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a85a828>"
+       "<IPython.lib.display.IFrame at 0x103e7d198>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -240,7 +239,7 @@
        "[1, 'a', 3]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +261,7 @@
        "[1, 'a', 3, 4]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +311,7 @@
        "{1}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +331,7 @@
        "{4}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +351,7 @@
        "{2, 3}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +371,7 @@
        "{1, 2, 3, 4}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,6 +379,13 @@
    "source": [
     "a|b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -472,6 +478,107 @@
     }
    },
    "source": [
+    "## 2. File Input/Output\n",
+    "\n",
+    "* Read file\n",
+    "* Write file\n",
+    "* Pandas dataframe example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 3. Database Connection\n",
+    "\n",
+    "* Common tools\n",
+    "* MySQL example\n",
+    "* AWS example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## 4. Webpage crawling\n",
+    "\n",
+    "* Common tools\n",
+    "* Regex match\n",
+    "* Example (www.advantage.com, grab all car rental addresses)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1400\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://www.advantage.com/us-location/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1041e5d68>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://www.advantage.com/us-location/\", width=1400, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## 5. Data Visualization"
    ]
   },
@@ -549,7 +656,7 @@
     }
    },
    "source": [
-    "* 6.1. Linear Regression"
+    "* 6.1. Linear Regression (randomly generated sample data)"
    ]
   },
   {
@@ -560,7 +667,14 @@
     }
    },
    "source": [
-    "* 6.2. k-Means"
+    "* 6.2. k-Means (Iris dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 6.3 PCA analysis on an image"
    ]
   },
   {
