--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -143,7 +143,7 @@
     }
    },
    "source": [
-    "### 0.3. IDE\n",
+    "### 0.4. IDE\n",
     "(picture source: https://www.datacamp.com/community/tutorials/tutorial-jupyter-notebook)\n",
     "\n",
     "* Jupyter Notebook\n",
@@ -165,6 +165,20 @@
     "* Spyder\n",
     "* Atom\n",
     "* ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 0.5.Prerequisite\n",
+    "\n",
+    "In order to run the following code\n",
+    "* Anaconda (recommended) (https://www.anaconda.com/distribution/)\n",
+    "* Library list included (requirements.txt)\n",
+    "\n",
+    "In order to run the notebook in presentation mode\n",
+    "* RISE extension to jupyter notebook (https://github.com/damianavila/RISE)"
    ]
   },
   {
