--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Content\n",
+    "## Content\n",
     "\n",
     "* What is Python??\n",
     "    * The origin\n",
@@ -175,7 +175,7 @@
     }
    },
    "source": [
-    "### 0.5.Prerequisite\n",
+    "### 0.5. Prerequisite\n",
     "\n",
     "In order to run the following code\n",
     "* Anaconda (recommended) (https://www.anaconda.com/distribution/)\n",
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -788,13 +788,41 @@
        "0  ABC    20"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.loc[df.name=='ABC'] # slice by condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     4.000000\n",
+       "mean     35.000000\n",
+       "std      12.909944\n",
+       "min      20.000000\n",
+       "25%      27.500000\n",
+       "50%      35.000000\n",
+       "75%      42.500000\n",
+       "max      50.000000\n",
+       "Name: ages, dtype: float64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.ages.describe()"
    ]
   },
   {
@@ -1347,9 +1375,54 @@
     }
    },
    "source": [
-    "* Function definition\n",
-    "    * Regular function\n",
-    "    * Lambda function"
+    "Function definition\n",
+    "* Regular function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Bot\n"
+     ]
+    }
+   ],
+   "source": [
+    "def helloworld(name):\n",
+    "    print('My name is {}'.format(name))\n",
+    "    # print('My name is %s' % name)\n",
+    "\n",
+    "helloworld('Bot')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Lambda function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Robot\n"
+     ]
+    }
+   ],
+   "source": [
+    "helloworld2 = lambda name: print('My name is {}'.format(name))\n",
+    "helloworld2('Robot')"
    ]
   },
   {
@@ -1361,6 +1434,53 @@
    },
    "source": [
     "* Class definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class table(object):\n",
+    "    \"\"\"\n",
+    "    Input table dimensions, calculate table properties    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    length: int, table length\n",
+    "    width: int, table width\n",
+    "    height: int, table height\n",
+    "    \"\"\"\n",
+    "    WHOAMI = 'A table'\n",
+    "    def __init__(self, length, width, height):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    def toparea(self):\n",
+    "        return(self.length * self.width)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A table\n",
+      "2 3 4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "tb = table(2,3,4)\n",
+    "tb = table(length=2, width=3, height=4)\n",
+    "print(tb.WHOAMI)\n",
+    "print(tb.length, tb.width, tb.height)\n",
+    "print(tb.toparea())"
    ]
   },
   {
