finished python basics

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -11,8 +11,6 @@
     "## Content\n",
     "\n",
     "* What is Python??\n",
-    "    * The origin\n",
-    "    * The eco-system\n",
     "* Python basics\n",
     "    * Data structure\n",
     "    * Pandas dataframe\n",
@@ -40,18 +38,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "### 0.1. The origin ..."
+    "### 0.1. In brief"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -59,8 +57,7 @@
     "* Supports multiple programming paradigms\n",
     "    * Object-oriented\n",
     "    * Functional\n",
-    "    * Procedural\n",
-    "    * Imperative\n",
+    "    * ...\n",
     "* Easy interface with other languages, such as C++/Java\n",
     "* A large and comprehensive standard library\n",
     "* Not so fast though …"
@@ -103,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -122,10 +119,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x102befc50>"
+       "<IPython.lib.display.IFrame at 0x110afc160>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +143,7 @@
     "### 0.4. IDE\n",
     "(picture source: https://www.datacamp.com/community/tutorials/tutorial-jupyter-notebook)\n",
     "\n",
-    "* Jupyter Notebook\n",
+    "* Jupyter Notebook/Jupyter Lab(beta)\n",
     "![title](../pics/jupyternotebook.gif)"
    ]
   },
@@ -244,10 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -257,7 +254,7 @@
        "[1, 'a', 3]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +276,7 @@
        "'a'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 'a', 3, 4]"
+       "[1, 'a', 3, 4, 4]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -337,16 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +343,7 @@
        "{1, 2, 3, 5, 6, 7}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +364,7 @@
        "{1, 5, 6, 7}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +384,7 @@
        "{4}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +404,7 @@
        "{2, 3}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 2, 3, 4}"
+       "{1, 2, 3, 4, 5, 6, 7}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -462,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +459,7 @@
        "1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +479,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +499,7 @@
        "{'a': 1, 'b': [2, 3, 4], 'c': {'d': [1, 2, 3]}, 'e': 5}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +592,7 @@
        "3  JKL   50"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -679,7 +667,7 @@
        "3  JKL    50"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -710,7 +698,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +722,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +776,7 @@
        "0  ABC    20"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +804,7 @@
        "Name: ages, dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -886,7 +874,7 @@
        "2  JKL  Knoxville, TN"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +973,7 @@
        "2  JKL   NaN  Knoxville, TN"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1051,7 @@
        "3  JKL    50  Knoxville, TN"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1150,7 +1138,7 @@
        "3  JKL    50  Knoxville, TN"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1198,7 @@
        "1  Knoxville, TN  1"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1268,7 @@
        "2  JKL  Knoxville, TN          1"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1326,7 @@
        "    <tr>\n",
        "      <th>JKL</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1349,16 +1337,16 @@
        "name                                \n",
        "DEF               2.0            0.0\n",
        "GHI               2.0            0.0\n",
-       "JKL               0.0            0.0"
+       "JKL               0.0            3.0"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_combo['num_pets'] = [1,2,2,0] # create a pivot table\n",
+    "df_combo['num_pets'] = [1,2,2,3] # create a pivot table\n",
     "df_combo.pivot_table(\n",
     "    index='name',\n",
     "    columns='hometown',\n",
@@ -1375,13 +1363,19 @@
     }
    },
    "source": [
-    "Function definition\n",
-    "* Regular function"
+    "* Function definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        Regular function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1404,12 +1398,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Lambda function"
+    "        Lambda function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1495,6 +1489,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 3]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = a # creat a new copy\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = a # create a reference\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 3]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1] = 4\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_a = table(2,3,4)\n",
+    "table_b = table_a # create a reference\n",
+    "table_a.length = 5\n",
+    "table_b.length"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1504,8 +1606,85 @@
    "source": [
     "### 1.2. Control statement\n",
     "\n",
-    "* Loop (if, while, comprehension, etc.)\n",
-    "* Conditional statement"
+    "* Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2): # i could be 0-2\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i<3:\n",
+    "    i+=1\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:10<00:00,  9.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## a better visualization!!\n",
+    "from tqdm import trange\n",
+    "import time\n",
+    "\n",
+    "a = 0\n",
+    "for i in trange(100):\n",
+    "    time.sleep(0.1)\n",
+    "    a = a + 1\n",
+    "print(a)"
    ]
   },
   {
@@ -1516,10 +1695,82 @@
     }
    },
    "source": [
-    "### 1.3. Package manager and environment\n",
-    "\n",
-    "* conda\n",
-    "* virtualenv"
+    "* Condition structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = [1,2,3,4]\n",
+    "for value in values:\n",
+    "    if value%2==0:\n",
+    "        print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "output = 1 if x<3 else 0 ## conditional value assignment\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 47554.47it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## combination of loop and condition\n",
+    "output = [\n",
+    "    i\n",
+    "    for i in trange(10) if i%2==0\n",
+    "] # list comprehension\n",
+    "output"
    ]
   },
   {
@@ -1529,7 +1780,21 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "### 1.3. Package manager\n",
+    "\n",
+    "* pip (example)\n",
+    "* conda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4. Virtual Environment\n",
+    "* virtualenv (example)\n",
+    "* conda"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1599,35 +1864,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1400\"\n",
-       "            height=\"400\"\n",
-       "            src=\"https://www.advantage.com/us-location/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1041e5d68>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "IFrame(\"https://www.advantage.com/us-location/\", width=1400, height=400)"
    ]
